fix step label disappear on ie issue

--- a/enriched/src/components/Steps/Steps.scss
+++ b/enriched/src/components/Steps/Steps.scss
@@ -106,7 +106,7 @@
   height: 2.5rem;
   display: none;
   @include from-breakpoint(medium) {
-    display: initial;
+    display: inline;
   }
 }
 
